fixed spacing on card details

--- a/index.css
+++ b/index.css
@@ -19,9 +19,30 @@ h1 {
 }
 
 .card-grid {
-    display: block;
+    display: flex;
     padding: 0 2.5%;
     margin: 20px 15px;
+    align-items: center;
+}
+
+.card-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin: 5px;
+    width: 150px;
+}
+
+.inner-card-grid {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.card-image > img {
+    width: 140px;
+    height: 200px;
 }
 
 .view {
@@ -39,4 +60,53 @@ h1 {
     margin-top: 40px;
     position: absolute;
     top: 0
+}
+
+table,
+th,
+td {
+    border: 1px solid;
+}
+
+table {
+    width: 100%;
+    max-width: 400px;
+    height: 240px;
+    margin: 0 auto;
+    display: block;
+    overflow-x: auto;
+    border-spacing: 0;
+}
+
+.card-details {
+    display: flex;
+    width: 100%;
+    margin-top: 50px;
+}
+
+tbody {
+    white-space: wrap;
+}
+
+th,
+td {
+    padding: 5px 10px;
+    border-top-width: 0;
+    border-left-width: 0;
+}
+
+th {
+    position: sticky;
+    top: 0;
+    background: #fff;
+    vertical-align: bottom;
+}
+
+th:last-child,
+td:last-child {
+    border-right-width: 0;
+}
+
+tr:last-child td {
+    border-bottom-width: 0;
 }
